fix safari alignment problem and use `pre` for text for linebreak

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #3d3f447a;
+  background-color: darkslateblue;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,7 @@
   text-align: justify;
 }
 .App-body {
-  background-color: rgb(224, 219, 219);
+  background-color: whitesmoke;
   padding: 50px;
   min-height: 90vh;
   display: flex;
@@ -24,4 +24,11 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
